--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,25 @@
+# SQLite. Versions 3.8.0 and up are supported.
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem "sqlite3"
+#
 default: &default
-  host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  port: 5432
-  adapter: postgresql
-  username: <%= ENV.fetch("DATABASE_USERNAME") {  } %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") {  } %>
+  timeout: 5000
 
 development:
   <<: *default
-  database: r7b_development
+  database: db/development.sqlite3
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: r7b_test
+  database: db/test.sqlite3
 
 production:
   <<: *default
-  database: r7b_production
-
+  database: db/production.sqlite3
