--- a/config/database.yml
+++ b/config/database.yml
@@ -17,3 +17,7 @@ test:
 production:
   <<: *default
   database: r7b_production
+  host: ENV['PGHOST']
+  username: ENV['PGUSER']
+  password: ENV['PGPASSWORD']
+  port: ENV['PGPORT']
