--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ test:
 
 production:
   <<: *default
-  database: r7b_production
+  database: <%= ENV.fetch("PGDATABASE") { 'r7b_production' } %>
   host: <%= ENV.fetch("PGHOST") { 'dpg-ce9aboo2i3ms217m0e90-a' } %>
   username: <%= ENV.fetch('PGUSER') { 'test' } %>
   password: <%= ENV.fetch('PGPASSWORD') { 'BUExTMsDpiATu0LjmKImBxPX8uts7aTZ' } %>
